dump memory usage statistics to steer a couple of times